--- a/src/pages/Main/styles.css
+++ b/src/pages/Main/styles.css
@@ -1,20 +1,26 @@
-.content{
-    display: flex;
-}
-
-.profileWhrapper{
-    max-width: 800px;
-    width: 900px;
-    height: 100vh;
+.inputUser{
     display: flex;
     justify-content: center;
-    align-items: center;
-    margin-top: 30px;
-    /* border-right: 2px solid #30303038; */
+    margin: 20px;
+}
+
+.border{
+    border: 1px solid #30303030;
+    border-radius: 5px;
+    display: flex;
+    padding: 10px;
+}
+
+.inputUser input{
+    border: none;
+}
+
+.profileNrepository{
+    display: flex;
+    justify-content: center;
 }
 
 .repositorieWhrapper{
-    margin-top: 22px;
-    width: 100vw;
-    /* max-width: 750px; */
+    width: 500px;
+    margin-top: 10px;
 }
