--- a/src/components/Header/styles.css
+++ b/src/components/Header/styles.css
@@ -8,3 +8,18 @@
     align-items: center;
     justify-content: center;
 }
+
+.title{
+    position: absolute;
+}
+
+.small{
+    display: flex;
+    margin-left: auto;
+    margin-right: 10px;
+    opacity: 0.7;
+}
+
+.small a{
+    color: #FFF;
+}
